--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@ body {
     background-color: #f0f0f0;
     margin-top: 20px;
 }
-/*.container-fluid {
-    margin-top: 20px;*/
-}
-.sidebar {
+
+.expand {
     position:fixed;
     top:0;
     left:0;
@@ -38,7 +36,7 @@ margin-top: 20px;
     padding:0;
 } 
 .folders li {
-    padding: 10px 15 px;
+    padding: 10px 15px;
     border-radius: 5px;
     margin-bottom: 5px;
     background-color: #8cc1df;
@@ -50,15 +48,15 @@ margin-top: 20px;
 .messages, 
 .selected-message, 
 .recent-activity { 
-    padding: 20px; 
+    padding: 10px 15px; 
     background-color: #fff;
-     border-radius: 10px; 
+     border-radius: 5px; 
      box-shadow: 0 0 10px rgba(0,0,0.1);
-     margin-bottom: 20px;
+     margin-bottom: 10px;
 } 
 .selected-message { 
     margin-top: 20px; 
-   /* animation: slideIn 0.5s ease-in-out;*/
+    animation: slideIn 0.5s ease-in-out;
 } 
 .message-content { 
     padding: 15px; 
@@ -84,9 +82,9 @@ margin-top: 20px;
     margin-top: 20px;
 }
 .message-actions button {
-    margin-left: 5px;
+    margin-left: 20px;
 }
-    @media (max-width: 991px) { 
+   /* @media (max-width: 991px) and (min-width: 100px) { 
         .folders, 
         .messages, 
         .selected-message, 
@@ -95,7 +93,7 @@ margin-top: 20px;
             
             } 
         
-        @media (max-width: 767px) { 
+        @media (max-width: 991px){ 
             .compose-btn,
              .reply-btn {
              margin-top: 10px; 
