--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     margin-top: 20px;
 }
 
+
 .content {
    /* margin-left: 25%;*/
     padding-left: 280px;
@@ -10,17 +11,20 @@ body {
 }
 .compose-btn{
     margin-bottom: 20px;
+    
 } 
 .reply-btn {
 margin-top: 20px;
  } 
  .search-bar { 
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
+    margin-right: 30px;
 } 
 .folders ul {
     list-style: none;
     padding:0;
+
 } 
 .folders li {
     padding: 10px 15px;
@@ -45,11 +49,13 @@ margin-top: 20px;
     margin-top: 20px; 
     animation: slideIn 0.5s ease-in-out;
 } 
-.message-content { 
+#message-content { 
     padding: 15px; 
     border: 1px solid #ced4da;
     border-radius: 10px; 
     margin-top: 20px; 
+    max-width: 100%;
+    overflow-wrap:break-word;
 }
 .message {
     color: #333;
